Implement ACO native context loop
